--- a/templates/app/views/splash/index.html.haml
+++ b/templates/app/views/splash/index.html.haml
@@ -19,4 +19,5 @@
 
       %p.lead.text-center Lots of great things just happened! You're not done though. Please follow the instructions below to get this project off to a good start!
 
-      = render :partial=>'readme'
+      = render :partial=>'environment_checks'
+      ~ render :partial=>'readme'
