--- a/templates/app/views/splash/index.html.haml
+++ b/templates/app/views/splash/index.html.haml
@@ -9,7 +9,7 @@
       .col-lg-6.col-lg-offset-3
         = form_tag splash_signup_path, role: :form, :class=>'form-horizontal', :remote=>true do
           .form-group
-            = text_field_tag :test, '',  :class=>'form-control', :placeholder=>'Email address'
+            = text_field_tag :signup_email, '',  :class=>'form-control', :placeholder=>'Email address'
           .form-group.text-center
             = submit_tag 'Submit', :class=>'btn btn-primary'
 
