--- a/templates/app/views/application/_header.html.haml
+++ b/templates/app/views/application/_header.html.haml
@@ -12,5 +12,8 @@
         %li= link_to 'Contact', '#'
         %li= link_to 'Blog', '#'
       %ul.nav.navbar-nav.navbar-right
-        %li= link_to 'Sign In', '#'
-        %li= link_to 'Sign Up', '#'
+        - if user_signed_in?
+          %li= link_to 'Sign Out', user_session_path, :method=>:destroy
+        - else
+          %li= link_to 'Sign In', new_user_session_path
+          %li= link_to 'Sign Up', new_user_registration_path
