--- a/templates/app/assets/stylesheets/application/variables.css.scss
+++ b/templates/app/assets/stylesheets/application/variables.css.scss
@@ -2,5 +2,11 @@ $footer-background-color: #333;
 $footer-color: #fff;
 $footer-height: 100px;
 
-$splash-bottom-color: #555;
-$splash-top-color: #333;
+$brand-primary: #ff6000;
+$body-bg: #747474;
+$text-color: #d7d7d7;
+
+$panel-bg: rgba(16,16,16,0.8);
+$panel-default-border: #000;
+$panel-default-heading-bg: rgba(64,64,64,0.8);
+$panel-default-text: #fff;
