--- a/templates/app/views/application/_footer.html.haml
+++ b/templates/app/views/application/_footer.html.haml
@@ -1,8 +1,8 @@
 %footer#footer
   .container
     .row
-      .col-md-6
+      .col-xs-6
         %h3 AppName
-      .col-md-6.text-right
+      .col-xs-6.text-right
         %small.copyright
           T, Copyright &copy; #{ Date.today.year }
