--- a/templates/app/views/application/_header.html.haml
+++ b/templates/app/views/application/_header.html.haml
@@ -1,4 +1,4 @@
-%header#top.navbar.navbar-static-top.navbar-inverse{:role=>:banner}
+%header#top.navbar.navbar-fixed-top.navbar-inverse{:role=>:banner}
   .container
     .navbar-header
       %button.navbar-toggle{:type=>:button, 'data-toggle'=>:collapse, 'data-target'=>'.navbar-collapse'}
@@ -6,7 +6,9 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'App name', root_path, :class=>'navbar-brand'
+      = link_to root_path, :class=>'navbar-brand' do
+        %span.glyphicon.glyphicon-cloud
+        App name
     %nav.collapse.navbar-collapse{:role=>:navigation}
       %ul.nav.navbar-nav
         %li= link_to 'Contact', '#'
