--- a/templates/app/assets/stylesheets/application/layout.css.scss
+++ b/templates/app/assets/stylesheets/application/layout.css.scss
@@ -27,7 +27,7 @@
 
 .splash {
   .jumbotron {
-    color: #fff;
+    color: $panel-default-text;
 
     background-image: url('https://s3.amazonaws.com/rickystestbucket/nyc.jpg');
     background-size: cover;
