Start facebook auth

--- a/templates/app/assets/stylesheets/application/variables.css.scss
+++ b/templates/app/assets/stylesheets/application/variables.css.scss
@@ -1,3 +1,7 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,700,300,600);
+
+$font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 $footer-background-color: #333;
 $footer-color: #fff;
 $footer-height: 100px;
