Validation error markup

--- a/templates/app/views/splash/index.html.haml
+++ b/templates/app/views/splash/index.html.haml
@@ -13,12 +13,13 @@
               .signup.col-md-7.col-md-offset-0.col-lg-7.col-lg-offset-0.col-sm-offset-2.col-sm-8
                 %p.lead Get ready. We'll make your life easier and more&nbsp;meaningful.
                 = form_tag splash_signup_path, role: :form, :class=>'form-horizontal', :remote=>true do
-                  .form-group
+                  .form-group#signup
                     .col-sm-12
                       .input-group
                         = text_field_tag :signup_email, '',  :class=>'form-control', :placeholder=>'Enter your email to know when we launch!'
                         %span.input-group-btn
                           = submit_tag 'Sign up', :class=>'btn btn-primary'
+                      %small#signup-message
 
 %section.dark
   .container
