--- a/templates/app/views/devise/passwords/edit.html.haml
+++ b/templates/app/views/devise/passwords/edit.html.haml
@@ -4,21 +4,17 @@
       .panel.panel-default.only
 
         .panel-heading
-          Sign up
+          Change your password
 
         .panel-body
 
-          = form_for(resource, as: resource_name, url: registration_path(resource_name), :html=>{:role=>:form, :class=>'form-horizontal'}) do |f|
+          = form_for(resource, as: resource_name, url: password_path(resource_name), :html=>{:role=>:form, :class=>'form-horizontal'}) do |f|
 
             = devise_error_messages!
 
             .form-group
-              = f.label :email, :class=>'control-label col-lg-3'
-              .col-lg-9= f.email_field :email, autofocus: true, :class=>'form-control', :placeholder=>'Email'
-
-            .form-group
               = f.label :password, :class=>'control-label col-lg-3'
-              .col-lg-9= f.password_field :password, autocomplete: "off", :class=>'form-control', :placeholder=>'Password'
+              .col-lg-9= f.password_field :password, autocomplete: "off", :autofocus: true, :class=>'form-control', :placeholder=>'Password'
 
             .form-group
               = f.label :password_confirmation, :class=>'control-label col-lg-3'
@@ -26,8 +22,10 @@
 
             .form-group
               .col-lg-9.col-lg-offset-3
-                = f.submit "Sign up", :class=>'btn btn-primary form-control'
+                = f.submit "Change my password", :class=>'btn btn-primary form-control'
 
             .form-group
               .col-lg-9.col-lg-offset-3.text-right
                 = link_to 'Sign in',  new_user_session_path
+                %br
+                = link_to 'Sign up',  new_user_registration_path
