Updating bootstrap and asset initializer.rb

--- a/templates/app/assets/stylesheets/application/index.css.scss
+++ b/templates/app/assets/stylesheets/application/index.css.scss
@@ -1,5 +1,6 @@
 // Bootstrap import
 //-----------------------------------------
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 //-----------------------------------------
