--- a/lib/generators/seed/bootstrap/templates/app/views/application/_header.html.haml
+++ b/lib/generators/seed/bootstrap/templates/app/views/application/_header.html.haml
@@ -13,9 +13,4 @@
       %ul.nav.navbar-nav
         %li= link_to 'Contact', '#'
         %li= link_to 'Blog', '#'
-      / %ul.nav.navbar-nav.navbar-right
-      /   - if user_signed_in?
-      /     %li= link_to 'Sign Out', user_session_path, :method=>:destroy
-      /   - else
-      /     %li= link_to 'Sign In', new_user_session_path
-      /     %li= link_to 'Sign Up', new_user_registration_path
+      / USER NAV
