Added setup controller

--- a/lib/generators/seed/devise/templates/app/views/devise/registrations/new.html.haml
+++ b/lib/generators/seed/devise/templates/app/views/devise/registrations/new.html.haml
@@ -30,4 +30,5 @@
 
             .form-group
               .col-lg-9.col-lg-offset-3.text-right
+                / CONNECT
                 = link_to 'Sign in',  new_user_session_path
