Active Admin and style sheets cleanup

--- a/lib/generators/happy_seed/omniauth/templates/app/views/users/show.html.haml
+++ b/lib/generators/happy_seed/omniauth/templates/app/views/users/show.html.haml
@@ -2,4 +2,4 @@
 
 %ul
   - @user.identities.each do |i|
-    %li= link_to "Connected to #{i.provider}" 
+    %li= link_to "Connected to #{i.provider}"
