Fixing up the view

--- a/lib/generators/happy_seed/bootstrap/templates/app/views/application/_head.html.haml
+++ b/lib/generators/happy_seed/bootstrap/templates/app/views/application/_head.html.haml
@@ -2,7 +2,7 @@
   %meta{ :charset => 'utf-8' }/
   %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
 
-  = display_meta_tags :site => 'New'
+  = display_meta_tags :site => 'Seed Site', :title => page_title, :reverse => true
 
   %meta{ :name => 'description', :content => '' }/
   %meta{ :name => 'viewport', :content => 'width=device-width' }/
