--- a/lib/generators/happy_seed/omniauth/templates/app/views/users/finish_signup.html.haml
+++ b/lib/generators/happy_seed/omniauth/templates/app/views/users/finish_signup.html.haml
@@ -15,7 +15,7 @@
                   %br
 
             .form-group                  
-              = f.label :email
+              = f.label :email, :class=>'control-label col-sm-3'
               .col-sm-9= f.text_field :email, :autofocus => true, :value => '', class: 'form-control input-lg', placeholder: 'Example: email@me.com'
 
               %p.col-sm-9.help-block
