Footer was missing container #16

--- a/lib/generators/happy_seed/bootstrap/templates/app/views/application/_footer.html.haml
+++ b/lib/generators/happy_seed/bootstrap/templates/app/views/application/_footer.html.haml
@@ -1,7 +1,8 @@
 %footer#footer
-  .row
-    .col-xs-6
-      %h3 AppName
-    .col-xs-6.text-right
-      %small.copyright
-        T, Copyright &copy; #{ Date.today.year }
+  .container
+    .row
+      .col-xs-6
+        %h3 AppName
+      .col-xs-6.text-right
+        %small.copyright
+          T, Copyright &copy; #{ Date.today.year }
