Remove vh/vm #16, #18

--- a/lib/generators/happy_seed/splash/templates/app/assets/stylesheets/splash.css.scss
+++ b/lib/generators/happy_seed/splash/templates/app/assets/stylesheets/splash.css.scss
@@ -80,13 +80,13 @@ body {
 }
 
 section {
-  padding-top: 20vh;
-  min-height: 90vh;
-  padding-bottom: 20vh;
+  padding-top: 20%;
+  min-height: 90%;
+  padding-bottom: 20%;
 }
 
 section #bottom {
-  margin-top: 10vh;
+  margin-top: 10%;
   font-size: 24px;
 }
 
